--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ API_TITLE=Casterly Rock Simulation API
 API_VERSION=1.0.0
 API_DESCRIPTION=Sistema de seleccion, asignacion y rotacion de agentes
 DEBUG=False
+
+# CORS - URLs permitidas del frontend (separadas por coma)
+# Para desarrollo: CORS_ORIGINS=*
+# Para produccion: CORS_ORIGINS=https://tu-frontend.pages.dev,https://tu-dominio.com
+CORS_ORIGINS=*
