--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,10 @@ DEBUG=True
 
 # CORS Configuration
 # Lista de origenes permitidos separados por coma
-CORS_ORIGINS=http://localhost:4200,http://localhost:3000
+# Para desarrollo: http://localhost:4200,http://localhost:3000
+# Para producción: https://frontend-castel.vercel.app
+# Para permitir todos: *
+CORS_ORIGINS=https://frontend-castel.vercel.app,http://localhost:4200,http://localhost:3000
 
 # Logging Configuration
 # Niveles: DEBUG, INFO, WARNING, ERROR, CRITICAL
