--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # MongoDB Configuration
-# Reemplaza con tu URL de MongoDB Atlas o local
-MONGODB_URL=mongodb+srv://usuario:password@cluster.mongodb.net/
-MONGODB_DATABASE=trading_simulation
+# Para desarrollo local usa: mongodb://localhost:27017/
+# Para MongoDB Atlas usa: mongodb+srv://usuario:password@cluster.mongodb.net/
+MONGODB_URI=mongodb://localhost:27017/
+DATABASE_NAME=simulacion_casterly_rock
 
 # API Configuration
 API_HOST=0.0.0.0
@@ -13,7 +14,7 @@ DEBUG=True
 # Para desarrollo: http://localhost:4200,http://localhost:3000
 # Para producción: https://frontend-castel.vercel.app
 # Para permitir todos: *
-CORS_ORIGINS=https://frontend-castel.vercel.app,http://localhost:4200,http://localhost:3000
+CORS_ORIGINS=http://localhost:4200,http://localhost:3000
 
 # Logging Configuration
 # Niveles: DEBUG, INFO, WARNING, ERROR, CRITICAL
