--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,10 @@ DEBUG=True
 
 # CORS Configuration
 # Lista de origenes permitidos separados por coma
-# Para desarrollo: http://localhost:4200,http://localhost:3000
-# Para producción: https://frontend-castel.vercel.app
-# Para permitir todos: *
-CORS_ORIGINS=http://localhost:4200,http://localhost:3000
+# Para desarrollo local: http://localhost:4200,http://localhost:3000
+# Para producción en Vercel: https://frontend-castel.vercel.app
+# Para permitir todos (NO recomendado en producción): *
+CORS_ORIGINS=https://frontend-castel.vercel.app
 
 # Logging Configuration
 # Niveles: DEBUG, INFO, WARNING, ERROR, CRITICAL
