--- a/render.yaml
+++ b/render.yaml
@@ -19,4 +19,4 @@ services:
       - key: DEBUG
         value: false
       - key: CORS_ORIGINS
-        value: http://localhost:4200,http://localhost:3000
+        value: https://frontend-castel.vercel.app
